--- a/src/pages/LandingPage/index.module.scss
+++ b/src/pages/LandingPage/index.module.scss
@@ -74,7 +74,7 @@
       right: 0;
       text-align: center;
       bottom: 48px;
-      button {
+      .see_why_btn {
         border-color: #6538e6;
         background: #6538e6;
         color: #fff;
