--- a/src/pages/LandingPage/Header.module.scss
+++ b/src/pages/LandingPage/Header.module.scss
@@ -60,9 +60,14 @@
       font-size: 16px;
       line-height: 140%;
       color: #000000;
+      width: 64px;
+      text-align: end;
     }
     .menu_toggle {
       position: relative;
+      &.button {
+        width: 64px;
+      }
     }
     .menu_wrapper {
       background: #fff;
@@ -79,7 +84,7 @@
       z-index: 0;
       background: #fff;
       position: absolute;
-      top: -56px;
+      top: -60px;
       left: 0;
       padding-top: 76px;
       .logo {
