feat: logo link to ds2

--- a/src/pages/LandingPage/Header.module.scss
+++ b/src/pages/LandingPage/Header.module.scss
@@ -60,13 +60,15 @@
       font-size: 16px;
       line-height: 140%;
       color: #000000;
-      width: 64px;
+      width: 70px;
       text-align: end;
+      white-space: nowrap;
     }
     .menu_toggle {
       position: relative;
       &.button {
-        width: 64px;
+        width: 70px;
+        justify-content: flex-start;
       }
     }
     .menu_wrapper {
