feat: update file cat

--- a/src/pages/LandingPage/PartWhatCustomerSay.module.scss
+++ b/src/pages/LandingPage/PartWhatCustomerSay.module.scss
@@ -94,6 +94,9 @@
         padding: 0 46px;
         min-width: 350px;
       }
+      .swiper-slide {
+        border-radius: 16px;
+      }
     }
   }
 }
