--- a/src/pages/LandingPage/PartFeature.module.scss
+++ b/src/pages/LandingPage/PartFeature.module.scss
@@ -1,6 +1,5 @@
 .part_feature {
   background: #f5f5f5;
-  padding: 70px;
   display: flex;
   flex-direction: column;
   row-gap: 36px;
@@ -55,7 +54,6 @@
 
   @at-root .is_m {
     .part_feature {
-      padding: 48px 16px;
       row-gap: 24px;
       .line_2 {
         font-size: 32px;
@@ -105,6 +103,14 @@
             margin-top: 24px;
           }
         }
+      }
+    }
+  }
+
+  @media screen and (min-width: 767px) and (max-width: 1140px) {
+    .line_3 {
+      .section_wrapper {
+        grid-template-columns: repeat(2, 1fr);
       }
     }
   }
