--- a/src/components/common/Footer.module.scss
+++ b/src/components/common/Footer.module.scss
@@ -5,6 +5,9 @@
   border-top: 1px solid #c7c7c7;
   background: var(--color-white);
 
+  .logo {
+    width: 160px;
+  }
   .content {
     & > hr {
       margin: 0;
