--- a/src/pages/LandingPage/PartOurMission.module.scss
+++ b/src/pages/LandingPage/PartOurMission.module.scss
@@ -19,6 +19,7 @@
         font-size: 16px;
         line-height: 120%;
         color: #cff963;
+        text-transform: uppercase;
       }
       .line_2 {
         font-weight: 500;
