--- a/src/pages/LandingPage/PartScaleBrand.module.scss
+++ b/src/pages/LandingPage/PartScaleBrand.module.scss
@@ -94,4 +94,11 @@
       }
     }
   }
+
+  @media screen and (min-width: 767px) and (max-width: 1140px) {
+    .line_3 {
+      grid-template-columns: repeat(2, 1fr);
+      grid-row-gap: 24px;
+    }
+  }
 }
