--- a/src/pages/LandingPage/Header.module.scss
+++ b/src/pages/LandingPage/Header.module.scss
@@ -15,6 +15,9 @@
     display: flex;
     align-items: center;
   }
+  .right {
+    white-space: nowrap;
+  }
   .logo {
     height: 33px;
   }
@@ -27,6 +30,7 @@
       font-size: 16px;
       line-height: 100%;
       a {
+        white-space: nowrap;
         color: #111111;
         a: hover {
           color: #000;
