--- a/src/components/common/Footer.module.scss
+++ b/src/components/common/Footer.module.scss
@@ -88,16 +88,6 @@
       font-size: 16px;
       font-weight: 400;
       line-height: 180%;
-
-      &:not(:first-child)::before {
-        content: '';
-        display: inline-block;
-        width: 0;
-        height: 16px;
-        margin: 0 10px;
-        border-left: 1px solid currentColor;
-        vertical-align: middle;
-      }
     }
   }
 
@@ -108,10 +98,35 @@
     }
   }
 
+  @at-root .is_desktop {
+    .secondary {
+      .secondary_item {
+        &:not(:first-child)::before {
+          content: '';
+          display: inline-block;
+          width: 0;
+          height: 16px;
+          margin: 0 10px;
+          border-left: 1px solid currentColor;
+          vertical-align: middle;
+        }
+      }
+    }
+  }
+
   @at-root .is_m {
     .main {
       grid-template-columns: repeat(1, 1fr);
       gap: 24px;
+      padding: 48px 16px;
+    }
+
+    .secondary {
+      padding: 48px 16px;
+      .secondary_item_wrapper {
+        flex-direction: column;
+        align-items: baseline;
+      }
     }
   }
 }
