--- a/src/pages/LandingPage/index.module.scss
+++ b/src/pages/LandingPage/index.module.scss
@@ -20,7 +20,7 @@
       padding: 70px;
 
       > div {
-        max-width: 1320px;
+        max-width: var(--max-content);
         margin: 0 auto;
       }
     }
