--- a/src/pages/LandingPage/PartOurMission.module.scss
+++ b/src/pages/LandingPage/PartOurMission.module.scss
@@ -6,6 +6,7 @@
       height: 100%;
       object-fit: cover;
       outline: none;
+      display: block;
     }
   }
   .block_wrapper_wrapper {
@@ -89,7 +90,7 @@
       .block_wrapper {
         grid-gap: 24px;
         background: #202221e6;
-        padding: 48px 16px;
+        padding: var(--padding-tb) var(--padding-lr);
         display: flex;
         flex-direction: column;
         align-items: center;
