--- a/src/pages/LandingPage/PartPlatforms.module.scss
+++ b/src/pages/LandingPage/PartPlatforms.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   row-gap: 36px;
-  padding: 70px 0;
+  padding: var(--padding-tb);
   background: #f5f5f5;
   .line_1 {
     font-weight: 500;
@@ -36,13 +36,14 @@
   @at-root .is_m {
     .part_platforms {
       row-gap: 24px;
+      padding: var(--padding-tb) var(--padding-lr);
       .line_2 {
         font-size: 32px;
       }
       .line_3 {
         gap: 24px;
         img {
-          height: 46px;
+          height: 40px;
         }
       }
     }
