feat: vide cover

--- a/src/pages/LandingPage/Header.module.scss
+++ b/src/pages/LandingPage/Header.module.scss
@@ -3,6 +3,7 @@
   z-index: 999;
   width: 100%;
   transition: all 0.3s;
+  background-color: #fff;
 
   .content {
     display: flex;
@@ -41,8 +42,8 @@
     }
   }
 
-  &.scrolled {
-    background-color: #fff;
+  &.scrolledDown {
+    position: relative;
   }
 
   &.is_desktop {
