--- a/src/pages/LandingPage/PartOurMission.module.scss
+++ b/src/pages/LandingPage/PartOurMission.module.scss
@@ -53,6 +53,7 @@
 @at-root .is_desktop {
   .part_our_mission {
     .video_wrapper {
+      width: 100%;
       position: absolute;
       top: 0;
       bottom: 0;
