--- a/src/pages/LandingPage/PartScaleYourLife.module.scss
+++ b/src/pages/LandingPage/PartScaleYourLife.module.scss
@@ -74,11 +74,6 @@
         white-space: nowrap;
       }
     }
-    .right_content {
-      position: relative;
-      background: center / 80% no-repeat
-        url('https://cdn.shopify.com/s/files/1/0532/6186/1018/files/Floating.webp?v=1676349541');
-    }
   }
 
   .see_why_btn_wrapper {
@@ -110,6 +105,13 @@
           padding-left: 70px;
           padding-right: 70px;
         }
+      }
+      .right_content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        background: center / 80% no-repeat
+          url('https://cdn.shopify.com/s/files/1/0532/6186/1018/files/Floating.webp?v=1676349541');
       }
     }
 
@@ -152,13 +154,20 @@
             font-size: 20px;
             text-align: center;
           }
+          .line_3 {
+            justify-content: center;
+          }
+          .line_4 {
+            text-align: center;
+          }
         }
 
         .right_content {
           width: 100%;
           z-index: 1;
-          background-size: 100%;
-          background-position: center 100px;
+          position: relative;
+          background: center 100px / 100% no-repeat
+            url('https://cdn.shopify.com/s/files/1/0532/6186/1018/files/Floating.webp?v=1676349541');
         }
       }
     }
