--- a/src/pages/LandingPage/PartOurMission.module.scss
+++ b/src/pages/LandingPage/PartOurMission.module.scss
@@ -57,6 +57,7 @@
       bottom: 0;
       left: 0;
       right: 0;
+      margin: 0 auto;
       max-width: 1320px;
       box-sizing: content-box;
       display: flex;
