--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
+  scroll-behavior: smooth;
 }
 
 *,
