--- a/src/pages/LandingPage/PartScaleYourLife.module.scss
+++ b/src/pages/LandingPage/PartScaleYourLife.module.scss
@@ -145,7 +145,7 @@
           z-index: 2;
           position: absolute;
           bottom: 0;
-          background: linear-gradient(to bottom, transparent 0%, #fff 30%, white);
+          background: linear-gradient(to bottom, transparent 0%, #fff 16%, white);
           .line_1 {
             font-size: 40px;
             text-align: center;
@@ -163,6 +163,7 @@
         }
 
         .right_content {
+          margin: 0 24px;
           width: 100%;
           z-index: 1;
           position: relative;
@@ -189,6 +190,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
+    background-color: #202221;
   }
 
   .list .rowup {
