--- a/src/pages/LandingPage/PartOurMission.module.scss
+++ b/src/pages/LandingPage/PartOurMission.module.scss
@@ -68,7 +68,7 @@
       .block_wrapper {
         position: relative;
         z-index: 1;
-        width: 55%;
+        // width: 55%;
         max-width: 800px;
         background: rgba(32, 34, 33, 0.9);
         border-radius: 24px;
