--- a/src/pages/LandingPage/PartScaleYourLife.module.scss
+++ b/src/pages/LandingPage/PartScaleYourLife.module.scss
@@ -106,20 +106,40 @@
           padding-right: 70px;
         }
       }
-      .right_content {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        background: center / 80% no-repeat
-          url('https://cdn.shopify.com/s/files/1/0532/6186/1018/files/Floating.webp?v=1676349541');
+      .right {
+        text-align: center;
+        .right_content {
+          width: 100%;
+          height: 100%;
+          position: relative;
+          padding: 100px 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
       }
-    }
-
-    @media screen and (min-width: 1340px) {
-      .part_scale_your_live_main {
+      @media screen and (min-width: 1341px) {
+        .right {
+          .right_content {
+            img {
+              width: auto;
+              height: 100%;
+            }
+          }
+        }
+      }
+      @media screen and (max-width: 1340px) {
         .content {
           .left_content {
             padding-left: 0;
+          }
+        }
+        .right {
+          .right_content {
+            img {
+              width: 100%;
+              height: auto;
+            }
           }
         }
       }
